deployment/ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ui
  name: ui
  namespace: k8s-seminar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
      - image: k8s-seminar-ui:1.0.0
        imagePullPolicy: Never  # to use local image
        name: k8s-seminar-ui
        resources: {}
        ports:
        - containerPort: 80
