deployment/api.svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api
  name: api
  namespace: k8s-seminar
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: api
  type: NodePort
