deployment/ui.svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ui
  name: ui
  namespace: k8s-seminar
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: ui
  type: NodePort
